--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="/images/WhatsApp Image 2024-08-09 at 20.56.32_9a8b5913.jpg" alt="">
+            <img src="/images/devjane-logo.png" alt="">
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
         </button>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav-list"><a href="#home" class="nav__link">Home</a></li>
+                <li class="nav-list"><a href="#intro" class="nav__link">Home</a></li>
                 <li class="nav-list"><a href="#services" class="nav__link">My Services</a></li>
                 <li class="nav-list"><a href="#about" class="nav__link">About me</a></li>
                 <li class="nav-list"><a href="#work" class="nav__link">My Work</a></li>
             </ul>
         </nav>
     </header>
-    <div class="intro">
+    <section class="intro" id="" intro>
         <h1 class="intro-title section-title-intro">Hi, I am <strong>Jane Smith</strong>
         </h1>
         <p class="intro-subtitle">FRONT-END DEV</p>
-        <img class="intro-img" src="./images/eduardo-dutra-k6b53YWZI9I-unsplash.png" alt="">
-    </div>
-    <section class="hero">
+        <img class="intro-img" src="./images/Rectangle 3@2x.png" alt="">
+    </section>
+    <section class="hero" id="services">
         <h1 class="hero-title">What I do</h1>
         <div class="hero-container">
             <div class="hero-info">
@@ -65,7 +65,7 @@
     </section>
 
 
-    <section class="about-me">
+    <section class="about-me" id="about">
         <h1 class="about-title">Who I am</h1>
         <p class="about-subtitle">Designer & developer based out of NYC
         </p>
@@ -77,40 +77,40 @@
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat.</p>
         </div>
-        <img class="about-img" src="./images/eduardo-dutra-Kqjc3vvgl1k-unsplash.png" alt="">
+        <img class="about-img" src="./images/Rectangle 3@2x.png" alt="">
     </section>
-    <section class="my-work">
+    <section class="my-work" id="work">
         <h2>My Work</h2>
         <p>A selection of my range of work</p>
         <div class="portfolio">
-            <a href="#" class="portfolio-item">
+            <a href="./portfolio-page.html" class="portfolio-item">
                 <img src="./images/christopher-gower-m_HRfLhgABo-unsplash.png" alt="" class="portfolio-img">
             </a>
-            <a href="#" class="portfolio-item">
+            <a href="./portfolio-page.html" class="portfolio-item">
                 <img src="./images/christopher-gower-m_HRfLhgABo-unsplash.png" alt="" class="portfolio-img">
             </a>
-            <a href="#" class="portfolio-item">
+            <a href="./portfolio-page.html" class="portfolio-item">
                 <img src="./images/christopher-gower-m_HRfLhgABo-unsplash.png" alt="" class="portfolio-img">
             </a>
-            <a href="#" class="portfolio-item">
+            <a href="./portfolio-page.html" class="portfolio-item">
                 <img src="./images/christopher-gower-m_HRfLhgABo-unsplash.png" alt="" class="portfolio-img">
             </a>
-            <a href="#" class="portfolio-item">
+            <a href="./portfolio-page.html" class="portfolio-item">
                 <img src="./images/christopher-gower-m_HRfLhgABo-unsplash.png" alt="" class="portfolio-img">
             </a>
-            <a href="#" class="portfolio-item">
+            <a href="./portfolio-page.html" class="portfolio-item">
                 <img src="./images/christopher-gower-m_HRfLhgABo-unsplash.png" alt="" class="portfolio-img">
             </a>
-            <a href="#" class="portfolio-item">
+            <a href="./portfolio-page.html" class="portfolio-item">
                 <img src="./images/christopher-gower-m_HRfLhgABo-unsplash.png" alt="" class="portfolio-img">
             </a>
-            <a href="#" class="portfolio-item">
+            <a href="./portfolio-page.html" class="portfolio-item">
                 <img src="./images/christopher-gower-m_HRfLhgABo-unsplash.png" alt="" class="portfolio-img">
             </a>
-            <a href="#" class="portfolio-item">
+            <a href="./portfolio-page.html" class="portfolio-item">
                 <img src="./images/christopher-gower-m_HRfLhgABo-unsplash.png" alt="" class="portfolio-img">
             </a>
-            <a href="#" class="portfolio-item">
+            <a href="./portfolio-page.html" class="portfolio-item">
                 <img src="./images/christopher-gower-m_HRfLhgABo-unsplash.png" alt="" class="portfolio-img">
             </a>
         </div>
@@ -124,7 +124,7 @@
                         class="fab fa-dribbble"></i></a></li>
             <li class="social-list__item"><a class="social-list__link" href="https://twitter.com"><i
                         class="fab fa-twitter"></i></a></li>
-            <li class="social-list__item"><a class="social-list__link" href="https://github.com"><i
+            <li class="social-list__item"><a class="social-list__link" href="https://github.com/abdullah-kashif"><i
                         class="fab fa-github"></i></a></li>
         </ul>
     </footer>
