--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             </ul>
         </nav>
     </header>
-    <section class="intro" id="" intro>
+    <div class="intro" id="intro" >
         <h1 class="intro-title section-title-intro">Hi, I am <strong>Jane Smith</strong>
         </h1>
         <p class="intro-subtitle">FRONT-END DEV</p>
-        <img class="intro-img" src="./images/Rectangle 3@2x.png" alt="">
-    </section>
+        <img class="intro-img" src="./images/portfolio-05.jpg" alt="">
+    </div>
     <section class="hero" id="services">
         <h1 class="hero-title">What I do</h1>
         <div class="hero-container">
@@ -79,7 +79,7 @@
         </div>
         <img class="about-img" src="./images/Rectangle 3@2x.png" alt="">
     </section>
-    <section class="my-work" id="work">
+    <div class="my-work" id="work">
         <h2>My Work</h2>
         <p>A selection of my range of work</p>
         <div class="portfolio">
@@ -114,9 +114,9 @@
                 <img src="./images/christopher-gower-m_HRfLhgABo-unsplash.png" alt="" class="portfolio-img">
             </a>
         </div>
-    </section>
+    </div>
     <footer class="footer">
-        <a href="" class="footer-link">hello@jane.dev</a>
+        <a href="" class="footer-link">hello@devjane.com</a>
         <ul class="social-list">
             <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"><i
                         class="fab fa-codepen"></i></a></li>
